Improved ball/goal physics

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,38 @@ sysinfo.txt
 
 *.sublime-project
 *.sublime-workspace
+/GGJ16/pitzblitz_Data/Managed/Assembly-CSharp.dll
+/GGJ16/pitzblitz_Data/Managed/Mono.Security.dll
+/GGJ16/pitzblitz_Data/Managed/System.Core.dll
+/GGJ16/pitzblitz_Data/Managed/System.dll
+/GGJ16/pitzblitz_Data/Managed/UnityEngine.Networking.dll
+/GGJ16/pitzblitz_Data/Managed/UnityEngine.UI.dll
+/GGJ16/pitzblitz_Data/Managed/UnityEngine.dll
+/GGJ16/pitzblitz_Data/Managed/UnityEngine.dll.mdb
+/GGJ16/pitzblitz_Data/Managed/mscorlib.dll
+/GGJ16/pitzblitz_Data/Mono/etc/mono/1.0/DefaultWsdlHelpGenerator.aspx
+/GGJ16/pitzblitz_Data/Mono/etc/mono/1.0/machine.config
+/GGJ16/pitzblitz_Data/Mono/etc/mono/2.0/Browsers/Compat.browser
+/GGJ16/pitzblitz_Data/Mono/etc/mono/2.0/DefaultWsdlHelpGenerator.aspx
+/GGJ16/pitzblitz_Data/Mono/etc/mono/2.0/machine.config
+/GGJ16/pitzblitz_Data/Mono/etc/mono/2.0/settings.map
+/GGJ16/pitzblitz_Data/Mono/etc/mono/2.0/web.config
+/GGJ16/pitzblitz_Data/Mono/etc/mono/browscap.ini
+/GGJ16/pitzblitz_Data/Mono/etc/mono/config
+/GGJ16/pitzblitz_Data/Mono/etc/mono/mconfig/config.xml
+/GGJ16/pitzblitz_Data/Mono/mono.dll
+/GGJ16/pitzblitz_Data/Resources/unity default resources
+/GGJ16/pitzblitz_Data/Resources/unity_builtin_extra
+/GGJ16/pitzblitz_Data/globalgamemanagers
+/GGJ16/pitzblitz_Data/globalgamemanagers.assets
+/GGJ16/pitzblitz_Data/level0
+/GGJ16/pitzblitz_Data/level0.resS
+/GGJ16/pitzblitz_Data/output_log.txt
+/GGJ16/pitzblitz_Data/resources.assets
+/GGJ16/pitzblitz_Data/resources.assets.resS
+/GGJ16/pitzblitz_Data/sharedassets0.assets
+/GGJ16/pitzblitz_Data/sharedassets0.assets.resS
+/GGJ16/pitzblitz_Data/sharedassets0.resource
+/GGJ16/pitzblitz.exe
+/GGJ16/player_win_x86.pdb
+/GGJ16/player_win_x86_s.pdb
